lab2/parser.out
Grammar:

Rule 0     S' -> instructions_opt
Rule 1     instructions_opt -> <empty>
Rule 2     instructions_opt -> instructions
Rule 3     instructions -> instruction
Rule 4     instructions -> instructions instruction
Rule 5     instruction -> assignment LINE_END
Rule 6     instruction -> FOR ID ASSIGN expr RANGE expr instruction
Rule 7     instruction -> WHILE LPAREN expr RPAREN instruction
Rule 8     instruction -> IF LPAREN expr RPAREN instruction ELSE instruction  [precedence=nonassoc, level=2]
Rule 9     instruction -> IF LPAREN expr RPAREN instruction  [precedence=nonassoc, level=1]
Rule 10    instruction -> LBRACE instructions RBRACE
Rule 11    instruction -> CONTINUE LINE_END
Rule 12    instruction -> BREAK LINE_END
Rule 13    instruction -> RETURN expr LINE_END
Rule 14    instruction -> PRINT elements LINE_END
Rule 15    assignment -> ID LBRACKET elements RBRACKET assign expr
Rule 16    assignment -> ID assign expr
Rule 17    assign -> DIVASSIGN
Rule 18    assign -> MULASSIGN
Rule 19    assign -> SUBASSIGN
Rule 20    assign -> ADDASSIGN
Rule 21    assign -> ASSIGN
Rule 22    expr -> expr TRANSPOSE  [precedence=left, level=8]
Rule 23    expr -> vector
Rule 24    expr -> MINUS expr  [precedence=right, level=7]
Rule 25    expr -> ONES LPAREN elements RPAREN
Rule 26    expr -> ZEROS LPAREN elements RPAREN
Rule 27    expr -> EYE LPAREN elements RPAREN
Rule 28    expr -> ID
Rule 29    expr -> STRING
Rule 30    expr -> FLOATNUM
Rule 31    expr -> INTNUM
Rule 32    expr -> LPAREN expr RPAREN
Rule 33    expr -> expr DOTDIV expr  [precedence=left, level=6]
Rule 34    expr -> expr DOTMUL expr  [precedence=left, level=6]
Rule 35    expr -> expr DOTSUB expr  [precedence=left, level=5]
Rule 36    expr -> expr DOTADD expr  [precedence=left, level=5]
Rule 37    expr -> expr DIVIDE expr  [precedence=left, level=6]
Rule 38    expr -> expr TIMES expr  [precedence=left, level=6]
Rule 39    expr -> expr MINUS expr  [precedence=left, level=5]
Rule 40    expr -> expr PLUS expr  [precedence=left, level=5]
Rule 41    expr -> expr LTE expr  [precedence=nonassoc, level=4]
Rule 42    expr -> expr GTE expr  [precedence=nonassoc, level=4]
Rule 43    expr -> expr GT expr  [precedence=nonassoc, level=4]
Rule 44    expr -> expr LT expr  [precedence=nonassoc, level=4]
Rule 45    expr -> expr NEQ expr  [precedence=nonassoc, level=3]
Rule 46    expr -> expr EQ expr  [precedence=nonassoc, level=3]
Rule 47    vector -> LBRACKET elements RBRACKET
Rule 48    elements -> expr
Rule 49    elements -> expr COMMA elements

Terminals, with rules where they appear:

ADDASSIGN            : 20
ASSIGN               : 6 21
BREAK                : 12
COMMA                : 49
CONTINUE             : 11
DIVASSIGN            : 17
DIVIDE               : 37
DOTADD               : 36
DOTDIV               : 33
DOTMUL               : 34
DOTSUB               : 35
ELSE                 : 8
EQ                   : 46
EYE                  : 27
FLOATNUM             : 30
FOR                  : 6
GT                   : 43
GTE                  : 42
ID                   : 6 15 16 28
IF                   : 8 9
INTNUM               : 31
LBRACE               : 10
LBRACKET             : 15 47
LINE_END             : 5 11 12 13 14
LPAREN               : 7 8 9 25 26 27 32
LT                   : 44
LTE                  : 41
MINUS                : 24 39
MULASSIGN            : 18
NEQ                  : 45
ONES                 : 25
PLUS                 : 40
PRINT                : 14
RANGE                : 6
RBRACE               : 10
RBRACKET             : 15 47
RETURN               : 13
RPAREN               : 7 8 9 25 26 27 32
STRING               : 29
SUBASSIGN            : 19
TIMES                : 38
TRANSPOSE            : 22
WHILE                : 7
ZEROS                : 26
error                : 

Nonterminals, with rules where they appear:

assign               : 15 16
assignment           : 5
elements             : 14 15 25 26 27 47 49
expr                 : 6 6 7 8 9 13 15 16 22 24 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 48 49
instruction          : 3 4 6 7 8 8 9
instructions         : 2 4 10
instructions_opt     : 0
vector               : 23


state 0

    (0) S' -> . instructions_opt
    (1) instructions_opt -> .
    (2) instructions_opt -> . instructions
    (3) instructions -> . instruction
    (4) instructions -> . instructions instruction
    (5) instruction -> . assignment LINE_END
    (6) instruction -> . FOR ID ASSIGN expr RANGE expr instruction
    (7) instruction -> . WHILE LPAREN expr RPAREN instruction
    (8) instruction -> . IF LPAREN expr RPAREN instruction ELSE instruction
    (9) instruction -> . IF LPAREN expr RPAREN instruction
    (10) instruction -> . LBRACE instructions RBRACE
    (11) instruction -> . CONTINUE LINE_END
    (12) instruction -> . BREAK LINE_END
    (13) instruction -> . RETURN expr LINE_END
    (14) instruction -> . PRINT elements LINE_END
    (15) assignment -> . ID LBRACKET elements RBRACKET assign expr
    (16) assignment -> . ID assign expr
    $end            reduce using rule 1 (instructions_opt -> .)
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    LBRACE          shift and go to state 9
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    ID              shift and go to state 6

    instructions_opt               shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    assignment                     shift and go to state 4

state 1

    (0) S' -> instructions_opt .


state 2

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (5) instruction -> . assignment LINE_END
    (6) instruction -> . FOR ID ASSIGN expr RANGE expr instruction
    (7) instruction -> . WHILE LPAREN expr RPAREN instruction
    (8) instruction -> . IF LPAREN expr RPAREN instruction ELSE instruction
    (9) instruction -> . IF LPAREN expr RPAREN instruction
    (10) instruction -> . LBRACE instructions RBRACE
    (11) instruction -> . CONTINUE LINE_END
    (12) instruction -> . BREAK LINE_END
    (13) instruction -> . RETURN expr LINE_END
    (14) instruction -> . PRINT elements LINE_END
    (15) assignment -> . ID LBRACKET elements RBRACKET assign expr
    (16) assignment -> . ID assign expr
    $end            reduce using rule 2 (instructions_opt -> instructions .)
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    LBRACE          shift and go to state 9
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    ID              shift and go to state 6

    instruction                    shift and go to state 14
    assignment                     shift and go to state 4

state 3

    (3) instructions -> instruction .
    FOR             reduce using rule 3 (instructions -> instruction .)
    WHILE           reduce using rule 3 (instructions -> instruction .)
    IF              reduce using rule 3 (instructions -> instruction .)
    LBRACE          reduce using rule 3 (instructions -> instruction .)
    CONTINUE        reduce using rule 3 (instructions -> instruction .)
    BREAK           reduce using rule 3 (instructions -> instruction .)
    RETURN          reduce using rule 3 (instructions -> instruction .)
    PRINT           reduce using rule 3 (instructions -> instruction .)
    ID              reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    RBRACE          reduce using rule 3 (instructions -> instruction .)


state 4

    (5) instruction -> assignment . LINE_END
    LINE_END        shift and go to state 15


state 5

    (6) instruction -> FOR . ID ASSIGN expr RANGE expr instruction
    ID              shift and go to state 16


state 6

    (15) assignment -> ID . LBRACKET elements RBRACKET assign expr
    (16) assignment -> ID . assign expr
    (17) assign -> . DIVASSIGN
    (18) assign -> . MULASSIGN
    (19) assign -> . SUBASSIGN
    (20) assign -> . ADDASSIGN
    (21) assign -> . ASSIGN
    LBRACKET        shift and go to state 17
    DIVASSIGN       shift and go to state 19
    MULASSIGN       shift and go to state 20
    SUBASSIGN       shift and go to state 21
    ADDASSIGN       shift and go to state 22
    ASSIGN          shift and go to state 23

    assign                         shift and go to state 18

state 7

    (7) instruction -> WHILE . LPAREN expr RPAREN instruction
    LPAREN          shift and go to state 24


state 8

    (8) instruction -> IF . LPAREN expr RPAREN instruction ELSE instruction
    (9) instruction -> IF . LPAREN expr RPAREN instruction
    LPAREN          shift and go to state 25


state 9

    (10) instruction -> LBRACE . instructions RBRACE
    (3) instructions -> . instruction
    (4) instructions -> . instructions instruction
    (5) instruction -> . assignment LINE_END
    (6) instruction -> . FOR ID ASSIGN expr RANGE expr instruction
    (7) instruction -> . WHILE LPAREN expr RPAREN instruction
    (8) instruction -> . IF LPAREN expr RPAREN instruction ELSE instruction
    (9) instruction -> . IF LPAREN expr RPAREN instruction
    (10) instruction -> . LBRACE instructions RBRACE
    (11) instruction -> . CONTINUE LINE_END
    (12) instruction -> . BREAK LINE_END
    (13) instruction -> . RETURN expr LINE_END
    (14) instruction -> . PRINT elements LINE_END
    (15) assignment -> . ID LBRACKET elements RBRACKET assign expr
    (16) assignment -> . ID assign expr
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    LBRACE          shift and go to state 9
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    ID              shift and go to state 6

    instructions                   shift and go to state 26
    instruction                    shift and go to state 3
    assignment                     shift and go to state 4

state 10

    (11) instruction -> CONTINUE . LINE_END
    LINE_END        shift and go to state 27


state 11

    (12) instruction -> BREAK . LINE_END
    LINE_END        shift and go to state 28


state 12

    (13) instruction -> RETURN . expr LINE_END
    (22) expr -> . expr TRANSPOSE
    (23) expr -> . vector
    (24) expr -> . MINUS expr
    (25) expr -> . ONES LPAREN elements RPAREN
    (26) expr -> . ZEROS LPAREN elements RPAREN
    (27) expr -> . EYE LPAREN elements RPAREN
    (28) expr -> . ID
    (29) expr -> . STRING
    (30) expr -> . FLOATNUM
    (31) expr -> . INTNUM
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . expr DOTDIV expr
    (34) expr -> . expr DOTMUL expr
    (35) expr -> . expr DOTSUB expr
    (36) expr -> . expr DOTADD expr
    (37) expr -> . expr DIVIDE expr
    (38) expr -> . expr TIMES expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr PLUS expr
    (41) expr -> . expr LTE expr
    (42) expr -> . expr GTE expr
    (43) expr -> . expr GT expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr NEQ expr
    (46) expr -> . expr EQ expr
    (47) vector -> . LBRACKET elements RBRACKET
    MINUS           shift and go to state 31
    ONES            shift and go to state 32
    ZEROS           shift and go to state 34
    EYE             shift and go to state 35
    ID              shift and go to state 36
    STRING          shift and go to state 37
    FLOATNUM        shift and go to state 38
    INTNUM          shift and go to state 39
    LPAREN          shift and go to state 33
    LBRACKET        shift and go to state 40

    expr                           shift and go to state 29
    vector                         shift and go to state 30

state 13

    (14) instruction -> PRINT . elements LINE_END
    (48) elements -> . expr
    (49) elements -> . expr COMMA elements
    (22) expr -> . expr TRANSPOSE
    (23) expr -> . vector
    (24) expr -> . MINUS expr
    (25) expr -> . ONES LPAREN elements RPAREN
    (26) expr -> . ZEROS LPAREN elements RPAREN
    (27) expr -> . EYE LPAREN elements RPAREN
    (28) expr -> . ID
    (29) expr -> . STRING
    (30) expr -> . FLOATNUM
    (31) expr -> . INTNUM
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . expr DOTDIV expr
    (34) expr -> . expr DOTMUL expr
    (35) expr -> . expr DOTSUB expr
    (36) expr -> . expr DOTADD expr
    (37) expr -> . expr DIVIDE expr
    (38) expr -> . expr TIMES expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr PLUS expr
    (41) expr -> . expr LTE expr
    (42) expr -> . expr GTE expr
    (43) expr -> . expr GT expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr NEQ expr
    (46) expr -> . expr EQ expr
    (47) vector -> . LBRACKET elements RBRACKET
    MINUS           shift and go to state 31
    ONES            shift and go to state 32
    ZEROS           shift and go to state 34
    EYE             shift and go to state 35
    ID              shift and go to state 36
    STRING          shift and go to state 37
    FLOATNUM        shift and go to state 38
    INTNUM          shift and go to state 39
    LPAREN          shift and go to state 33
    LBRACKET        shift and go to state 40

    elements                       shift and go to state 41
    expr                           shift and go to state 42
    vector                         shift and go to state 30

state 14

    (4) instructions -> instructions instruction .
    FOR             reduce using rule 4 (instructions -> instructions instruction .)
    WHILE           reduce using rule 4 (instructions -> instructions instruction .)
    IF              reduce using rule 4 (instructions -> instructions instruction .)
    LBRACE          reduce using rule 4 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instructions instruction .)
    BREAK           reduce using rule 4 (instructions -> instructions instruction .)
    RETURN          reduce using rule 4 (instructions -> instructions instruction .)
    PRINT           reduce using rule 4 (instructions -> instructions instruction .)
    ID              reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)
    RBRACE          reduce using rule 4 (instructions -> instructions instruction .)


state 15

    (5) instruction -> assignment LINE_END .
    FOR             reduce using rule 5 (instruction -> assignment LINE_END .)
    WHILE           reduce using rule 5 (instruction -> assignment LINE_END .)
    IF              reduce using rule 5 (instruction -> assignment LINE_END .)
    LBRACE          reduce using rule 5 (instruction -> assignment LINE_END .)
    CONTINUE        reduce using rule 5 (instruction -> assignment LINE_END .)
    BREAK           reduce using rule 5 (instruction -> assignment LINE_END .)
    RETURN          reduce using rule 5 (instruction -> assignment LINE_END .)
    PRINT           reduce using rule 5 (instruction -> assignment LINE_END .)
    ID              reduce using rule 5 (instruction -> assignment LINE_END .)
    $end            reduce using rule 5 (instruction -> assignment LINE_END .)
    RBRACE          reduce using rule 5 (instruction -> assignment LINE_END .)
    ELSE            reduce using rule 5 (instruction -> assignment LINE_END .)


state 16

    (6) instruction -> FOR ID . ASSIGN expr RANGE expr instruction
    ASSIGN          shift and go to state 43


state 17

    (15) assignment -> ID LBRACKET . elements RBRACKET assign expr
    (48) elements -> . expr
    (49) elements -> . expr COMMA elements
    (22) expr -> . expr TRANSPOSE
    (23) expr -> . vector
    (24) expr -> . MINUS expr
    (25) expr -> . ONES LPAREN elements RPAREN
    (26) expr -> . ZEROS LPAREN elements RPAREN
    (27) expr -> . EYE LPAREN elements RPAREN
    (28) expr -> . ID
    (29) expr -> . STRING
    (30) expr -> . FLOATNUM
    (31) expr -> . INTNUM
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . expr DOTDIV expr
    (34) expr -> . expr DOTMUL expr
    (35) expr -> . expr DOTSUB expr
    (36) expr -> . expr DOTADD expr
    (37) expr -> . expr DIVIDE expr
    (38) expr -> . expr TIMES expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr PLUS expr
    (41) expr -> . expr LTE expr
    (42) expr -> . expr GTE expr
    (43) expr -> . expr GT expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr NEQ expr
    (46) expr -> . expr EQ expr
    (47) vector -> . LBRACKET elements RBRACKET
    MINUS           shift and go to state 31
    ONES            shift and go to state 32
    ZEROS           shift and go to state 34
    EYE             shift and go to state 35
    ID              shift and go to state 36
    STRING          shift and go to state 37
    FLOATNUM        shift and go to state 38
    INTNUM          shift and go to state 39
    LPAREN          shift and go to state 33
    LBRACKET        shift and go to state 40

    elements                       shift and go to state 44
    expr                           shift and go to state 42
    vector                         shift and go to state 30

state 18

    (16) assignment -> ID assign . expr
    (22) expr -> . expr TRANSPOSE
    (23) expr -> . vector
    (24) expr -> . MINUS expr
    (25) expr -> . ONES LPAREN elements RPAREN
    (26) expr -> . ZEROS LPAREN elements RPAREN
    (27) expr -> . EYE LPAREN elements RPAREN
    (28) expr -> . ID
    (29) expr -> . STRING
    (30) expr -> . FLOATNUM
    (31) expr -> . INTNUM
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . expr DOTDIV expr
    (34) expr -> . expr DOTMUL expr
    (35) expr -> . expr DOTSUB expr
    (36) expr -> . expr DOTADD expr
    (37) expr -> . expr DIVIDE expr
    (38) expr -> . expr TIMES expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr PLUS expr
    (41) expr -> . expr LTE expr
    (42) expr -> . expr GTE expr
    (43) expr -> . expr GT expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr NEQ expr
    (46) expr -> . expr EQ expr
    (47) vector -> . LBRACKET elements RBRACKET
    MINUS           shift and go to state 31
    ONES            shift and go to state 32
    ZEROS           shift and go to state 34
    EYE             shift and go to state 35
    ID              shift and go to state 36
    STRING          shift and go to state 37
    FLOATNUM        shift and go to state 38
    INTNUM          shift and go to state 39
    LPAREN          shift and go to state 33
    LBRACKET        shift and go to state 40

    expr                           shift and go to state 45
    vector                         shift and go to state 30

state 19

    (17) assign -> DIVASSIGN .
    MINUS           reduce using rule 17 (assign -> DIVASSIGN .)
    ONES            reduce using rule 17 (assign -> DIVASSIGN .)
    ZEROS           reduce using rule 17 (assign -> DIVASSIGN .)
    EYE             reduce using rule 17 (assign -> DIVASSIGN .)
    ID              reduce using rule 17 (assign -> DIVASSIGN .)
    STRING          reduce using rule 17 (assign -> DIVASSIGN .)
    FLOATNUM        reduce using rule 17 (assign -> DIVASSIGN .)
    INTNUM          reduce using rule 17 (assign -> DIVASSIGN .)
    LPAREN          reduce using rule 17 (assign -> DIVASSIGN .)
    LBRACKET        reduce using rule 17 (assign -> DIVASSIGN .)


state 20

    (18) assign -> MULASSIGN .
    MINUS           reduce using rule 18 (assign -> MULASSIGN .)
    ONES            reduce using rule 18 (assign -> MULASSIGN .)
    ZEROS           reduce using rule 18 (assign -> MULASSIGN .)
    EYE             reduce using rule 18 (assign -> MULASSIGN .)
    ID              reduce using rule 18 (assign -> MULASSIGN .)
    STRING          reduce using rule 18 (assign -> MULASSIGN .)
    FLOATNUM        reduce using rule 18 (assign -> MULASSIGN .)
    INTNUM          reduce using rule 18 (assign -> MULASSIGN .)
    LPAREN          reduce using rule 18 (assign -> MULASSIGN .)
    LBRACKET        reduce using rule 18 (assign -> MULASSIGN .)


state 21

    (19) assign -> SUBASSIGN .
    MINUS           reduce using rule 19 (assign -> SUBASSIGN .)
    ONES            reduce using rule 19 (assign -> SUBASSIGN .)
    ZEROS           reduce using rule 19 (assign -> SUBASSIGN .)
    EYE             reduce using rule 19 (assign -> SUBASSIGN .)
    ID              reduce using rule 19 (assign -> SUBASSIGN .)
    STRING          reduce using rule 19 (assign -> SUBASSIGN .)
    FLOATNUM        reduce using rule 19 (assign -> SUBASSIGN .)
    INTNUM          reduce using rule 19 (assign -> SUBASSIGN .)
    LPAREN          reduce using rule 19 (assign -> SUBASSIGN .)
    LBRACKET        reduce using rule 19 (assign -> SUBASSIGN .)


state 22

    (20) assign -> ADDASSIGN .
    MINUS           reduce using rule 20 (assign -> ADDASSIGN .)
    ONES            reduce using rule 20 (assign -> ADDASSIGN .)
    ZEROS           reduce using rule 20 (assign -> ADDASSIGN .)
    EYE             reduce using rule 20 (assign -> ADDASSIGN .)
    ID              reduce using rule 20 (assign -> ADDASSIGN .)
    STRING          reduce using rule 20 (assign -> ADDASSIGN .)
    FLOATNUM        reduce using rule 20 (assign -> ADDASSIGN .)
    INTNUM          reduce using rule 20 (assign -> ADDASSIGN .)
    LPAREN          reduce using rule 20 (assign -> ADDASSIGN .)
    LBRACKET        reduce using rule 20 (assign -> ADDASSIGN .)


state 23

    (21) assign -> ASSIGN .
    MINUS           reduce using rule 21 (assign -> ASSIGN .)
    ONES            reduce using rule 21 (assign -> ASSIGN .)
    ZEROS           reduce using rule 21 (assign -> ASSIGN .)
    EYE             reduce using rule 21 (assign -> ASSIGN .)
    ID              reduce using rule 21 (assign -> ASSIGN .)
    STRING          reduce using rule 21 (assign -> ASSIGN .)
    FLOATNUM        reduce using rule 21 (assign -> ASSIGN .)
    INTNUM          reduce using rule 21 (assign -> ASSIGN .)
    LPAREN          reduce using rule 21 (assign -> ASSIGN .)
    LBRACKET        reduce using rule 21 (assign -> ASSIGN .)


state 24

    (7) instruction -> WHILE LPAREN . expr RPAREN instruction
    (22) expr -> . expr TRANSPOSE
    (23) expr -> . vector
    (24) expr -> . MINUS expr
    (25) expr -> . ONES LPAREN elements RPAREN
    (26) expr -> . ZEROS LPAREN elements RPAREN
    (27) expr -> . EYE LPAREN elements RPAREN
    (28) expr -> . ID
    (29) expr -> . STRING
    (30) expr -> . FLOATNUM
    (31) expr -> . INTNUM
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . expr DOTDIV expr
    (34) expr -> . expr DOTMUL expr
    (35) expr -> . expr DOTSUB expr
    (36) expr -> . expr DOTADD expr
    (37) expr -> . expr DIVIDE expr
    (38) expr -> . expr TIMES expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr PLUS expr
    (41) expr -> . expr LTE expr
    (42) expr -> . expr GTE expr
    (43) expr -> . expr GT expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr NEQ expr
    (46) expr -> . expr EQ expr
    (47) vector -> . LBRACKET elements RBRACKET
    MINUS           shift and go to state 31
    ONES            shift and go to state 32
    ZEROS           shift and go to state 34
    EYE             shift and go to state 35
    ID              shift and go to state 36
    STRING          shift and go to state 37
    FLOATNUM        shift and go to state 38
    INTNUM          shift and go to state 39
    LPAREN          shift and go to state 33
    LBRACKET        shift and go to state 40

    expr                           shift and go to state 46
    vector                         shift and go to state 30

state 25

    (8) instruction -> IF LPAREN . expr RPAREN instruction ELSE instruction
    (9) instruction -> IF LPAREN . expr RPAREN instruction
    (22) expr -> . expr TRANSPOSE
    (23) expr -> . vector
    (24) expr -> . MINUS expr
    (25) expr -> . ONES LPAREN elements RPAREN
    (26) expr -> . ZEROS LPAREN elements RPAREN
    (27) expr -> . EYE LPAREN elements RPAREN
    (28) expr -> . ID
    (29) expr -> . STRING
    (30) expr -> . FLOATNUM
    (31) expr -> . INTNUM
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . expr DOTDIV expr
    (34) expr -> . expr DOTMUL expr
    (35) expr -> . expr DOTSUB expr
    (36) expr -> . expr DOTADD expr
    (37) expr -> . expr DIVIDE expr
    (38) expr -> . expr TIMES expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr PLUS expr
    (41) expr -> . expr LTE expr
    (42) expr -> . expr GTE expr
    (43) expr -> . expr GT expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr NEQ expr
    (46) expr -> . expr EQ expr
    (47) vector -> . LBRACKET elements RBRACKET
    MINUS           shift and go to state 31
    ONES            shift and go to state 32
    ZEROS           shift and go to state 34
    EYE             shift and go to state 35
    ID              shift and go to state 36
    STRING          shift and go to state 37
    FLOATNUM        shift and go to state 38
    INTNUM          shift and go to state 39
    LPAREN          shift and go to state 33
    LBRACKET        shift and go to state 40

    expr                           shift and go to state 47
    vector                         shift and go to state 30

state 26

    (10) instruction -> LBRACE instructions . RBRACE
    (4) instructions -> instructions . instruction
    (5) instruction -> . assignment LINE_END
    (6) instruction -> . FOR ID ASSIGN expr RANGE expr instruction
    (7) instruction -> . WHILE LPAREN expr RPAREN instruction
    (8) instruction -> . IF LPAREN expr RPAREN instruction ELSE instruction
    (9) instruction -> . IF LPAREN expr RPAREN instruction
    (10) instruction -> . LBRACE instructions RBRACE
    (11) instruction -> . CONTINUE LINE_END
    (12) instruction -> . BREAK LINE_END
    (13) instruction -> . RETURN expr LINE_END
    (14) instruction -> . PRINT elements LINE_END
    (15) assignment -> . ID LBRACKET elements RBRACKET assign expr
    (16) assignment -> . ID assign expr
    RBRACE          shift and go to state 48
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    LBRACE          shift and go to state 9
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    ID              shift and go to state 6

    instruction                    shift and go to state 14
    assignment                     shift and go to state 4

state 27

    (11) instruction -> CONTINUE LINE_END .
    FOR             reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    WHILE           reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    IF              reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    LBRACE          reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    CONTINUE        reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    BREAK           reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    RETURN          reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    PRINT           reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    ID              reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    $end            reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    RBRACE          reduce using rule 11 (instruction -> CONTINUE LINE_END .)
    ELSE            reduce using rule 11 (instruction -> CONTINUE LINE_END .)


state 28

    (12) instruction -> BREAK LINE_END .
    FOR             reduce using rule 12 (instruction -> BREAK LINE_END .)
    WHILE           reduce using rule 12 (instruction -> BREAK LINE_END .)
    IF              reduce using rule 12 (instruction -> BREAK LINE_END .)
    LBRACE          reduce using rule 12 (instruction -> BREAK LINE_END .)
    CONTINUE        reduce using rule 12 (instruction -> BREAK LINE_END .)
    BREAK           reduce using rule 12 (instruction -> BREAK LINE_END .)
    RETURN          reduce using rule 12 (instruction -> BREAK LINE_END .)
    PRINT           reduce using rule 12 (instruction -> BREAK LINE_END .)
    ID              reduce using rule 12 (instruction -> BREAK LINE_END .)
    $end            reduce using rule 12 (instruction -> BREAK LINE_END .)
    RBRACE          reduce using rule 12 (instruction -> BREAK LINE_END .)
    ELSE            reduce using rule 12 (instruction -> BREAK LINE_END .)


state 29

    (13) instruction -> RETURN expr . LINE_END
    (22) expr -> expr . TRANSPOSE
    (33) expr -> expr . DOTDIV expr
    (34) expr -> expr . DOTMUL expr
    (35) expr -> expr . DOTSUB expr
    (36) expr -> expr . DOTADD expr
    (37) expr -> expr . DIVIDE expr
    (38) expr -> expr . TIMES expr
    (39) expr -> expr . MINUS expr
    (40) expr -> expr . PLUS expr
    (41) expr -> expr . LTE expr
    (42) expr -> expr . GTE expr
    (43) expr -> expr . GT expr
    (44) expr -> expr . LT expr
    (45) expr -> expr . NEQ expr
    (46) expr -> expr . EQ expr
    LINE_END        shift and go to state 49
    TRANSPOSE       shift and go to state 50
    DOTDIV          shift and go to state 51
    DOTMUL          shift and go to state 52
    DOTSUB          shift and go to state 53
    DOTADD          shift and go to state 54
    DIVIDE          shift and go to state 55
    TIMES           shift and go to state 56
    MINUS           shift and go to state 57
    PLUS            shift and go to state 58
    LTE             shift and go to state 59
    GTE             shift and go to state 60
    GT              shift and go to state 61
    LT              shift and go to state 62
    NEQ             shift and go to state 63
    EQ              shift and go to state 64


state 30

    (23) expr -> vector .
    LINE_END        reduce using rule 23 (expr -> vector .)
    TRANSPOSE       reduce using rule 23 (expr -> vector .)
    DOTDIV          reduce using rule 23 (expr -> vector .)
    DOTMUL          reduce using rule 23 (expr -> vector .)
    DOTSUB          reduce using rule 23 (expr -> vector .)
    DOTADD          reduce using rule 23 (expr -> vector .)
    DIVIDE          reduce using rule 23 (expr -> vector .)
    TIMES           reduce using rule 23 (expr -> vector .)
    MINUS           reduce using rule 23 (expr -> vector .)
    PLUS            reduce using rule 23 (expr -> vector .)
    LTE             reduce using rule 23 (expr -> vector .)
    GTE             reduce using rule 23 (expr -> vector .)
    GT              reduce using rule 23 (expr -> vector .)
    LT              reduce using rule 23 (expr -> vector .)
    NEQ             reduce using rule 23 (expr -> vector .)
    EQ              reduce using rule 23 (expr -> vector .)
    COMMA           reduce using rule 23 (expr -> vector .)
    RBRACKET        reduce using rule 23 (expr -> vector .)
    RPAREN          reduce using rule 23 (expr -> vector .)
    RANGE           reduce using rule 23 (expr -> vector .)
    FOR             reduce using rule 23 (expr -> vector .)
    WHILE           reduce using rule 23 (expr -> vector .)
    IF              reduce using rule 23 (expr -> vector .)
    LBRACE          reduce using rule 23 (expr -> vector .)
    CONTINUE        reduce using rule 23 (expr -> vector .)
    BREAK           reduce using rule 23 (expr -> vector .)
    RETURN          reduce using rule 23 (expr -> vector .)
    PRINT           reduce using rule 23 (expr -> vector .)
    ID              reduce using rule 23 (expr -> vector .)


state 31
